# fastkill

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo.yaml
src/: main.rs  process.rs  unix.rs  windows.rs
