[package]
name = "fastkill"
version = "1.0.0"
edition = "2021"
description = "Interactive CLI to kill process with port/pid/name"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.4.0"
sysinfo = "0.3.15"
regex = "1.6.0"
once_cell = "1"
unicode-width = "0.1.10"
